[gd_scene load_steps=23 format=3 uid="uid://dg40bv11w6vac"]

[ext_resource type="Texture2D" uid="uid://cp4iq5fd6j8be" path="res://art/background.png" id="1_b7c46"]
[ext_resource type="Script" uid="uid://wktkbpgtokkc" path="res://Scenes/battle/battle.gd" id="1_xldij"]
[ext_resource type="Script" uid="uid://5qku1tnyrk6e" path="res://Scenes/ui/hand.gd" id="2_pav5v"]
[ext_resource type="PackedScene" uid="uid://dss7tb6c7dh0d" path="res://Scenes/enemy/enemy.tscn" id="2_u4h1j"]
[ext_resource type="PackedScene" uid="uid://c5ghquslryyb" path="res://Scenes/card_target_selector/card_target_selector.tscn" id="3_n8n4j"]
[ext_resource type="AudioStream" uid="uid://dpdenqqbovwfq" path="res://art/8_bit_iced_village_lofi.mp3" id="3_onkcd"]
[ext_resource type="PackedScene" uid="uid://hooj6w8lh50q" path="res://Scenes/player/player.tscn" id="3_u4h1j"]
[ext_resource type="Resource" uid="uid://df8yh6s80fmob" path="res://Characters/warrior/warrior.tres" id="4_jjjy4"]
[ext_resource type="Script" uid="uid://cqcjmc58gcrvx" path="res://Scenes/enemy/enemy_handler.gd" id="4_xldij"]
[ext_resource type="Resource" uid="uid://bhv1sxvqfcoq" path="res://enemies/crab/card_enemy.tres" id="5_xwsv1"]
[ext_resource type="Script" uid="uid://bghj8ufpucqxt" path="res://Scenes/ui/battle_ui.gd" id="7_xwsv1"]
[ext_resource type="Script" uid="uid://jetmewuwxqyt" path="res://Scenes/player/player_handler.gd" id="8_8q1pg"]
[ext_resource type="Resource" uid="uid://bo5xuunh1i38n" path="res://enemies/bat/bat_enemy.tres" id="8_sqhwe"]
[ext_resource type="PackedScene" uid="uid://dy1aimn2gc7wu" path="res://Scenes/ui/mana_ui.tscn" id="11_dv1vr"]
[ext_resource type="PackedScene" uid="uid://cmwkf8x840lmw" path="res://Scenes/ui/tooltip.tscn" id="12_8q1pg"]
[ext_resource type="Theme" uid="uid://bbglnsf5xcrtw" path="res://main_theme.tres" id="13_xwsv1"]
[ext_resource type="Script" uid="uid://b8f452qau4btl" path="res://Scenes/ui/red_flash.gd" id="15_o5ms1"]
[ext_resource type="PackedScene" uid="uid://wwwcd6qu3uhp" path="res://Scenes/ui/card_pile_oprner.tscn" id="17_fj4ke"]
[ext_resource type="PackedScene" uid="uid://dj35ma8njg8kc" path="res://Scenes/ui/batle_over_panel.tscn" id="17_segsv"]
[ext_resource type="Texture2D" uid="uid://tpthsj2rfu01" path="res://art/discard.png" id="18_yjn7a"]
[ext_resource type="PackedScene" uid="uid://cpqvsmb8wcs5p" path="res://Scenes/ui/card_pile_view.tscn" id="21_pr673"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b7c46"]
size = Vector2(256, 100)

[node name="Battle" type="Node2D"]
script = ExtResource("1_xldij")
char_stats = ExtResource("4_jjjy4")
music = ExtResource("3_onkcd")

[node name="Backgound" type="Sprite2D" parent="."]
modulate = Color(0.413683, 0.413683, 0.413683, 1)
texture = ExtResource("1_b7c46")
centered = false
metadata/_edit_lock_ = true

[node name="CardDropArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropArea"]
position = Vector2(128, 50)
shape = SubResource("RectangleShape2D_b7c46")
debug_color = Color(0, 0.6, 0.701961, 0.152941)

[node name="EnemyHandler" type="Node2D" parent="."]
script = ExtResource("4_xldij")

[node name="BatEnemy" parent="EnemyHandler" instance=ExtResource("2_u4h1j")]
position = Vector2(165, 65)
stats = ExtResource("8_sqhwe")

[node name="CarbEnemy" parent="EnemyHandler" instance=ExtResource("2_u4h1j")]
position = Vector2(199, 81)
stats = ExtResource("5_xwsv1")

[node name="BatEnemy2" parent="EnemyHandler" instance=ExtResource("2_u4h1j")]
position = Vector2(230, 64)
stats = ExtResource("8_sqhwe")

[node name="Player" parent="." instance=ExtResource("3_u4h1j")]
position = Vector2(49, 78)
stats = ExtResource("4_jjjy4")

[node name="CardTargetSelector" parent="." instance=ExtResource("3_n8n4j")]

[node name="PlayerHandler" type="Node" parent="." node_paths=PackedStringArray("hand")]
script = ExtResource("8_8q1pg")
hand = NodePath("../BattleUI/Hand")

[node name="BattleUI" type="CanvasLayer" parent="." groups=["ui_layer"]]
script = ExtResource("7_xwsv1")

[node name="Hand" type="HBoxContainer" parent="BattleUI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -30.0
offset_right = 75.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
script = ExtResource("2_pav5v")

[node name="ManaUI" parent="BattleUI" instance=ExtResource("11_dv1vr")]
offset_left = 8.0
offset_top = -42.0
offset_right = 26.0
offset_bottom = -24.0
char_stats = ExtResource("4_jjjy4")

[node name="Tooltip" parent="BattleUI" instance=ExtResource("12_8q1pg")]
offset_top = 4.0
offset_bottom = 40.0

[node name="EndTurnButton" type="Button" parent="BattleUI"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -41.0
offset_right = -5.0
offset_bottom = -25.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("13_xwsv1")
theme_override_font_sizes/font_size = 10
text = "结束回合"

[node name="DarwPileOprner" parent="BattleUI" node_paths=PackedStringArray("counter") instance=ExtResource("17_fj4ke")]
unique_name_in_owner = true
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = -20.0
offset_right = 25.0
offset_bottom = -4.0
grow_vertical = 0
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="BattleUI/DarwPileOprner"]
layout_mode = 0
offset_left = 13.0
offset_top = 12.0
offset_right = 23.0
offset_bottom = 18.0
text = "99"

[node name="DiscardPileOprner" parent="BattleUI" node_paths=PackedStringArray("counter") instance=ExtResource("17_fj4ke")]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -20.0
offset_right = -8.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("18_yjn7a")
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="BattleUI/DiscardPileOprner"]
layout_mode = 0
offset_left = -6.0
offset_top = 11.0
offset_right = 4.0
offset_bottom = 17.0
text = "99"

[node name="RedFlash" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource("15_o5ms1")

[node name="ColorRect" type="ColorRect" parent="RedFlash"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.443137, 0.443137, 0)

[node name="Timer" type="Timer" parent="RedFlash"]
wait_time = 0.1
one_shot = true

[node name="BattleOverLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="BatleOverPanel" parent="BattleOverLayer" instance=ExtResource("17_segsv")]
visible = false

[node name="CardPlieView" type="CanvasLayer" parent="."]
layer = 4

[node name="DarwPlieView" parent="CardPlieView" instance=ExtResource("21_pr673")]
unique_name_in_owner = true
visible = false

[node name="DiscardPlieView" parent="CardPlieView" instance=ExtResource("21_pr673")]
unique_name_in_owner = true
visible = false
